<resources>
    <string name="app_name">TicTacToe</string>

    <!-- PlayerNamesScreen -->
    <string name="title_player_names">Enter Player Names</string>
    <string name="hint_player_one">Player One</string>
    <string name="hint_player_two">Player Two</string>
    <string name="start_game_text">Start Game</string>
    <string name="main_icon_description">Main Icon App</string>
    <string name="motivation_text">Lets play!, You are the best! :D</string>

    <string name="error">Error</string>
    <string name="text_error_message">Player names must have at least one letter.</string>
    <string name="ok">OK</string>
    <!-- PlayerNamesScreen -->

    <!-- BoardGameScreen -->
    <string name="dummy_player_name">Player Name</string>
    <string name="player_turn">Turn</string>
    <string name="player_icon_description">Player Icon</string>

    <string name="player_one_name">Player One</string>
    <string name="player_two_name">Player Two</string>

    <string name="winner">Winner!!!</string>
    <string name="text_winner_message">won the Game :)</string>
    <string name="restart">restart?</string>
    <string name="draw">Draw!!!</string>
    <string name="text_tie_message">GG, It´s a draw :)</string>
    <string name="exit">Exit</string>
    <!-- PlayerNamesScreen -->

</resources>